# go-practice

./: Makefile  README.md  pyproject.toml  snapshot1.json  streaming.json
cmd/day_five/: main.go
cmd/day_five/archive/: main.go  main1.go  main2.go
cmd/day_four/: main.go
cmd/day_one/: main.go
cmd/day_three/: main.py
cmd/day_two/: main.py  main2.py  main3.py  pyproject.toml  test-save.json
