[project]
name = "day-two"
version = "0.1.0"
description = ""
authors = [
    {name = "Jameson Stone",email = "jameson.stone@invitae.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
